<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="20dp" >
    
    <TextView
        android:id="@+id/label_recipients"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/recipients_send_label" />

    <EditText
        android:id="@+id/edit_recipients"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_recipients"
        android:inputType="textMultiLine"
        android:hint="@string/recipients_hint" />

    <TextView
        android:id="@+id/label_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_recipients"
        android:text="@string/message_hint" />

    <EditText
        android:id="@+id/edit_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_message"
        android:inputType="textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine"
        android:hint="@string/message_hint" />
    
    <TextView
        android:id="@+id/label_duration"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_message"
        android:text="@string/duration_label" />

    <Button
        android:id="@+id/button_duration"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_duration"
        android:onClick="onDurationClick"
        android:text="@string/set_duration" 
        android:layout_marginTop="5dp"/>
    
	<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/glympse_history"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_duration"
        android:layout_above="@+id/layout_bottom_buttons"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:paddingLeft="2dp"
        android:paddingRight="8dp"
        android:paddingTop="10dp"
        android:visibility="visible" >
        
        <TextView
	        android:id="@+id/history_message"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:padding="12dp"
	        android:textSize="20sp"
	        android:textColor="@color/glympse_grey_102"
	        android:visibility="visible"
	        android:text="@string/history_syncing_to_server" />
        
        <ListView 
            android:id="@+id/history_list"
            android:layout_width="fill_parent"
        	android:layout_height="fill_parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_bottom_buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:onClick="onSendClick"
            android:text="@string/button_send" />

        <Button
            android:id="@+id/button_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:onClick="onExitClick"
            android:text="@string/button_exit" />
    </LinearLayout>

</RelativeLayout>
    